# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-12-01 19:20:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-140

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-140


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Maintest.hs


2004-12-01 17:07:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-139

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-139


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     testsrc/ConfigParser/Maintest.hs


2004-12-01 17:04:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-138

    Summary:
      Basic interpolation working
    Revision:
      missingh--head--0.5--patch-138


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Maintest.hs


2004-12-01 16:43:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-137

    Summary:
      Checkpointing basic interpolation
    Revision:
      missingh--head--0.5--patch-137


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-12-01 16:09:58 GMT	John Goerzen <jgoerzen@complete.org>	patch-136

    Summary:
      Checkpointing again
    Revision:
      missingh--head--0.5--patch-136


    removed files:
     cpexample1.hs

    modified files:
     ChangeLog TODO libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-30 22:21:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-135

    Summary:
      Checkpointing docs
    Revision:
      missingh--head--0.5--patch-135


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs

